<package>
  <name>unigripper_msgs</name>
  <version>0.1.1</version>
  <description>
    This package defines messages used by the Unigripper gripper interface
  </description>
  <maintainer email="alberto@lcad.inf.ufes.br">Alberto F. De Souza</maintainer>
  <license>BSD</license>
  <author email="alberto@lcad.inf.ufes.br">Alberto F. De Souza</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
